@@ -1,4 +1,5 @@
 HEAD
+	+ Added a way to check whether we are managing the AD schema or not
 	+ Clean up openchange section in stub smb.conf file
 	+ Fix typo in SambaLdapUser that fixes error in change email
 	+ Change user modification hook from _modifyUser to _preModifyUser
